fixed css bug on mobile

--- a/src/assets/scss/account.scss
+++ b/src/assets/scss/account.scss
@@ -32,11 +32,17 @@
           }
       }
     }
+    #delete-account {
+      display: none;
+      @media screen and (min-width: $small-desktop){
+        display: inline-block;
+      }
+    }
   }
   &__section {
     min-height: calc(100vh - 90px);
     @media screen and (max-width: 600px){
-    grid-template-rows: 42% 58%;
+    grid-template-rows: 30% 70%;
     }
     @media screen and (max-width: 1023px) {
       grid-template-columns: 1fr;
