--- a/src/assets/scss/btn.scss
+++ b/src/assets/scss/btn.scss
@@ -7,7 +7,6 @@ button {
   background-color: $dark-color;
   color: $base-color;
   width: 100%;
-  padding: 10px;
   border: 1px solid $dark-color;
   height: 40px;
   transition: 0.5s ease-in-out;
@@ -19,9 +18,6 @@ button {
   &:active {
     background-color: $base-color;
     color: $dark-color;
-  }
-  @media screen and (min-width: $tablet){
-  padding: 10px 20px;
   }
 }
 
