--- a/src/assets/scss/user-info.scss
+++ b/src/assets/scss/user-info.scss
@@ -42,12 +42,14 @@
     }
   }
   &__img {
+    display: none;
     width: 120px;
     height: 120px;
     position: relative;
     z-index: 1;
     margin-bottom: 10px;
     @media screen and (min-width: $tablet) {
+      display: block;
         width: 140px;
         height: 140px;
         margin-bottom: 20px;
